--- a/JerryBackendPass.html
+++ b/JerryBackendPass.html
@@ -74,7 +74,7 @@
 <nav>
     <a href="/index.html">Home</a>
     <a href="/JERRYabout.html">About</a>
-    <a href="/pass.html">Contact</a>
+    <a href="https://mail.google.com/mail/?view=cm&fs=1&to=wyatt.kraai@thegenerals.org&su=Banana&body=YOUR%20CLUE%20IS%20DOG%20MONKEY">THE SECTRET WORD IS BANANA</a>
 </nav>
 
 <main>
