--- a/JERRY.html
+++ b/JERRY.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -40,6 +39,8 @@
             margin: 20px auto;
             background-color: rgba(255, 255, 255, 0.9);
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            overflow-y: auto; /* Added for scrolling */
+            max-height: 70vh; /* Limit height for scrolling */
         }
         footer {
             background-color: rgba(46, 44, 44, 0.8);
@@ -53,6 +54,19 @@
         h1 {
             font-size: 24px;
             text-align: center;
+        }
+        .lore {
+            margin-top: 20px;
+            font-style: italic;
+        }
+        .image-container {
+            display: flex;
+            overflow-x: auto; /* Horizontal scrolling for images */
+            gap: 10px; /* Space between images */
+        }
+        img {
+            max-height: 300px; /* Limit image height */
+            flex: 0 0 auto; /* Prevent images from shrinking */
         }
         table {
             width: 100%;
@@ -86,8 +100,14 @@
 </nav>
 
 <main>
-    <img src="https://raw.githubusercontent.com/iMacWeirdo/iMacWeirdo.github.io/refs/heads/main/Resources/JERRY/JERRY.png" alt="JERRY">
-    <img src="https://github.com/iMacWeirdo/iMacWeirdo.github.io/blob/main/Resources/JERRY/HUGEBACK.png?raw=true" alt="HUGEBACK">
+    <div class="lore">
+        <h2>Jerry</h2>
+        <p>Once upon a time in a mythical land, there was a creature named Jerry—part man, part fish. Jerry loved to swim, but he had a unique problem: he often forgot how to walk! His friends would often find him sliding into the local diner, ordering "fish and chips" without realizing the irony. Legend has it that Jerry's greatest fear was becoming a famous chef, for he believed he would accidentally serve himself!</p>
+    </div>
+    <div class="image-container">
+        <img src="https://raw.githubusercontent.com/iMacWeirdo/iMacWeirdo.github.io/refs/heads/main/Resources/JERRY/JERRY.png" alt="JERRY">
+        <img src="https://github.com/iMacWeirdo/iMacWeirdo.github.io/blob/main/Resources/JERRY/HUGEBACK.png?raw=true" alt="HUGEBACK">
+    </div>
 </main>
 
 <footer>
