--- a/pass.html
+++ b/pass.html
@@ -119,7 +119,7 @@
             { name: 'Mackenzie', date: '2007-07-12', redirect: 'nicetry.html' },
             { name: 'Wyatt', date: '2007-09-01', redirect: 'wyattsucks.html' },
             { name: 'Liz', date: '2007-03-12', redirect: 'nicetry.html' },
-            { name: 'Triston', date: '2008-04-11', redirect: 'nicetry.html' }
+            { name: 'Triston', date: '2008-04-11', redirect: 'nicetry.html' },
             { name: 'Jerry', date: '1988-08-26', redirect: 'JerryBackendPass.html' }
             
         ];
