--- a/pass.html
+++ b/pass.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -120,8 +119,7 @@
             { name: 'Wyatt', date: '2007-09-01', redirect: 'wyattsucks.html' },
             { name: 'Liz', date: '2007-03-12', redirect: 'nicetry.html' },
             { name: 'Triston', date: '2008-04-11', redirect: 'nicetry.html' },
-            { name: 'Jerry', date: '1988-08-26', redirect: 'JerryBackendPass.html' }
-            
+            { name: 'Jerry', date: '1988-08-26', redirect: 'JerryBackendPass.html' } // Added missing comma here
         ];
 
         const entry = validEntries.find(entry => 
