--- a/JerryBackendPass.html
+++ b/JerryBackendPass.html
@@ -195,7 +195,7 @@
         document.addEventListener('keydown', function(event) {
             typed += event.key;
 
-            if (typed === "dogmonkeydogmonkey") {
+            if (typed === "dogmonkeydogmonkeydogmonkey") {
                 sessionStorage.setItem("canAccessClassList", "true");
                 window.location.href = "/StageTwoDogMonkey.html";
             }
