--- a/JerryBackendPass.html
+++ b/JerryBackendPass.html
@@ -205,5 +205,26 @@
             }
         });
     </script>
+    <script>
+        function allowAccess() {
+            sessionStorage.setItem("canAccessClassList", "true");
+            window.location.href = "/youlikeboys.html";
+        }
+
+        let typed = "";
+
+        document.addEventListener('keydown', function(event) {
+            typed += event.key;
+
+            if (typed === "ilikeboys") {
+                sessionStorage.setItem("canAccessClassList", "true");
+                window.location.href = "youlikeboys.html";
+            }
+
+            if (typed.length > 25) {
+                typed = typed.substring(1);
+            }
+        });
+    </script>
 </body>
 </html>
