--- a/backendpass_dog_monkey.html
+++ b/backendpass_dog_monkey.html
@@ -1,1 +1,49 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Error Screen</title>
+    <link rel="icon" href="https://github.com/iMacWeirdo/iMacWeirdo.github.io/blob/main/Resources/JERRY/CUP.png?raw=true" type="image/png">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-image: url('https://github.com/iMacWeirdo/iMacWeirdo.github.io/blob/main/Resources/JERRY/BACKGROUND.png?raw=true');
+            background-size: cover;
+            background-position: center;
+            color: #000;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+        h1 {
+            font-size: 48px;
+            text-align: center;
+            margin-bottom: 20px;
+            color: #ff0000; /* Red for emphasis */
+        }
+        #backButton {
+            padding: 20px 40px;
+            font-size: 24px;
+            background-color: rgba(180, 180, 180, 0.8);
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+        #backButton:hover {
+            background-color: rgba(160, 160, 160, 0.8);
+        }
+    </style>
+</head>
+<body>
 
+<h1>HAVE YOU TRIED PRESSING THE BANNANA BUTTON????</h1>
+<button id="backButton" onclick="window.history.back()">Back</button>
+
+</body>
+</html>
