--- a/JERRY.html
+++ b/JERRY.html
@@ -95,7 +95,7 @@
 
 <nav>
     <a href="/index.html">Home</a>
-    <a href="/JERRYabout.html">About</a>
+    <a href="/about.html">About</a>
     <a href="/pass.html">Contact</a>
 </nav>
 
