--- a/youlikeboys.html
+++ b/youlikeboys.html
@@ -83,7 +83,7 @@
 
 <main>
     <h1>YOU LIKE BOYS?</h1>
-    <h1><a href="/jerrybackendpass.html">Back</a></h1>
+    <h1><a href="/JerryBackendPass.html">Back</a></h1>
     
     <p>  </p>
     <p>  </p>
