--- a/youlikeboys.html
+++ b/youlikeboys.html
@@ -106,7 +106,7 @@
             allowAccess("/StageTwoDogMonkey.html");
         }
         // Check if the typed string matches the second condition
-        else if (typed === "dogmonkeydogmonkeydogmonkey") {
+        else if (typed === "dogmonkey") {
             console.log("Accessing youlikeboys.html"); // Log before redirect
             allowAccess("/StageTwoDogMonkey.html");
         }
