--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modern Transition Website</title>
+    <title>Wyatt Sucks</title>
     <style>
         body, html {
             margin: 0;
@@ -74,7 +74,11 @@
 
     <div class="main-content hidden" id="main-content">
         <h1>Wyatt Sucks</h1>
-        <p></p> // PUT MAIN CONTENT(TEXT)HERE
+        <p>I am truly sorry for what I did. My intentions were not to win you over, initially. I just naturally assumed that you didn't like me, so I made a 
+            horrible move and told Elliot that you like him. This was completely the wrong move, because by doing so, I medled in both of your personal lives, 
+            and I 100% sshould not have.
+        </p> 
+        <a href="https://docs.google.com/document/d/1JDSLGxcPjJTnZmFB1VdUOqqaZLoGJSTe3MkfTlhE9c4/edit?usp=sharing">Proof 1</a>
     </div>
 
     <script>
