--- a/index.html
+++ b/index.html
@@ -74,11 +74,10 @@
 
     <div class="main-content hidden" id="main-content">
         <h1>Wyatt Sucks</h1>
-        <p>I am truly sorry for what I did. My intentions were not to win you over, initially. I just naturally assumed that you didn't like me, so I made a 
-            horrible move and told Elliot that you like him. This was completely the wrong move, because by doing so, I medled in both of your personal lives, 
-            and I 100% sshould not have.
-        </p> 
-        <a href="https://docs.google.com/document/d/1JDSLGxcPjJTnZmFB1VdUOqqaZLoGJSTe3MkfTlhE9c4/edit?usp=sharing">Proof 1</a>
+        <a href="/j.html">Jordan</a>
+        <a href="/t.html">Triston</a>
+        <a href="/l.html">Liz</a>
+        <a href="/m.html">Mackenzie</a>
     </div>
 
     <script>
