--- a/j.html
+++ b/j.html
@@ -1,1 +1,9 @@
-
+<p>
+            I am truly sorry for what I did. My intentions were not to win you over, initially. I just naturally assumed that you didn't like me, so I made a 
+            horrible move and told Elliot that you like him. This was completely the wrong move, because by doing so, I medled in both of your personal lives, 
+            and I 100% should not have.
+        </p> 
+        <a href="https://docs.google.com/document/d/1JDSLGxcPjJTnZmFB1VdUOqqaZLoGJSTe3MkfTlhE9c4/edit?usp=sharing">(Continued)</a>
+        <p>
+            On another note, really do feel awful for how 
+        </p>
