--- a/j.html
+++ b/j.html
@@ -76,7 +76,10 @@
         </p> 
         <a href="https://docs.google.com/document/d/1JDSLGxcPjJTnZmFB1VdUOqqaZLoGJSTe3MkfTlhE9c4/edit?usp=sharing">(Continued)</a>
         <p>
-            On another note, really do feel awful for how 
+            On another note, really do feel awful for how I didn't tell you, but I know that that kind of stuff creates rifts in friendships and I didn't want 
+            a repeat of what happened with you and Triston not talking for almost 4 months. I make a better asshole than hero, so it's easier for me to just burn 
+            the bridge before I even ge to it. That's why I sent you what I did. I really hope that some day you'll be able to forgive me, but in the meantime, I 
+            need to be distanced from the group so I don't do anything else stupid.
         </p>
     </div>
 
