--- a/j.html
+++ b/j.html
@@ -68,7 +68,7 @@
     
 
     <div class="main-content hidden" id="main-content">
-        <h1>Wyatt Sucks</h1>
+        <h1>Jordan</h1>
         <p>
             I am truly sorry for what I did. My intentions were not to win you over, initially. I just naturally assumed that you didn't like me, so I made a 
             horrible move and told Elliot that you like him. This was completely the wrong move, because by doing so, I medled in both of your personal lives, 
