--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
     <div class="main-content hidden" id="main-content">
         <h1>Wyatt Sucks</h1>
         <a href="/j.html">Jordan</a>
+        <a href="/e.html">Elliot</a>
         <a href="/t.html">Triston</a>
         <a href="/l.html">Liz</a>
         <a href="/m.html">Mackenzie</a>
