--- a/e.html
+++ b/e.html
@@ -1,1 +1,55 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Wyatt Sucks</title>
+    <style>
+        body, html {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4; /* Retained background color */
+            color: #333; /* Retained text color */
+        }
 
+        .main-content {
+            padding: 20px;
+            text-align: center;
+            height: 100%; /* Full height for centering */
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+        }
+
+        h1 {
+            font-size: 3em;
+            margin-bottom: 20px;
+        }
+
+        a {
+            display: block;
+            margin: 10px 0;
+            text-decoration: none;
+            color: blue;
+            font-size: 1.2em;
+        }
+
+        a:hover {
+            text-decoration: underline; /* Style for hover effect */
+        }
+    </style>
+</head>
+<body>
+
+    <div class="main-content">
+        <h1>Elliot</h1>
+        <p>
+           Hey. I'm extremely sorry for being a dick to you and meddling in your personal life. I know that what I did is really screwed up, and I hope you will eventually be able to forgive me.
+        </p>
+    </div>
+
+</body>
+</html>
