--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
 
     <div class="main-content hidden" id="main-content">
         <h1>Wyatt Sucks</h1>
-        <a href="/j.html">Jordan</a>
-        <a href="/e.html">Elliot</a>
-        <a href="/t.html">Triston</a>
-        <a href="/l.html">Liz</a>
-        <a href="/m.html">Mackenzie</a>
+        <h3>><a href="/j.html">Jordan</a></h3>
+        <h3><a href="/e.html">Elliot</a></h3>
+        <h3><a href="/t.html">Triston</a></h3>
+        <h3><a href="/l.html">Liz</a></h3>
+        <h3><a href="/m.html">Mackenzie</a></h3>
     </div>
 
     <script>
