--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
     <div class="main-content hidden" id="main-content">
         <h1>Wyatt Sucks</h1>
-        <h3>><a href="/j.html">Jordan</a></h3>
+        <h3><a href="/j.html">Jordan</a></h3>
         <h3><a href="/e.html">Elliot</a></h3>
         <h3><a href="/t.html">Triston</a></h3>
         <h3><a href="/l.html">Liz</a></h3>
