--- a/index.html
+++ b/index.html
@@ -74,11 +74,15 @@
 
     <div class="main-content hidden" id="main-content">
         <h1>Wyatt Sucks</h1>
+        <p>
+            Wyatt sucks! He is a horrible friend and person. Honestly, I don't see why any of you were friends with him in the first place. If you need to find out why he's a terrible person, please click the respective links below.
+        </p>
         <h3><a href="/j.html">Jordan</a></h3>
         <h3><a href="/e.html">Elliot</a></h3>
         <h3><a href="/t.html">Triston</a></h3>
         <h3><a href="/l.html">Liz</a></h3>
         <h3><a href="/m.html">Mackenzie</a></h3>
+        <h3><a href"/ee.html">Everyone Else</a></h3>
     </div>
 
     <script>
