--- a/l.html
+++ b/l.html
@@ -45,7 +45,7 @@
 <body>
 
     <div class="main-content">
-        <h1>Wyatt Sucks</h1>
+        <h1>Liz</h1>
         <p>
            I'm sorry, I haven't finished this one yet. :(
         </p>
