--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <h3><a href="/t.html">Triston</a></h3>
         <h3><a href="/l.html">Liz</a></h3>
         <h3><a href="/m.html">Mackenzie</a></h3>
-        <h3><a href"/ee.html">Everyone Else</a></h3>
+        <h3><a href="/ee.html">Everyone Else</a></h3>
     </div>
 
     <script>
