--- a/j.html
+++ b/j.html
@@ -58,6 +58,7 @@
             the bridge before I even ge to it. That's why I sent you what I did. I really hope that some day you'll be able to forgive me, but in the meantime, I 
             need to be distanced from the group so I don't do anything else stupid.
         </p>
+        <a href="https://docs.google.com/document/d/1JDSLGxcPjJTnZmFB1VdUOqqaZLoGJSTe3MkfTlhE9c4/edit?usp=sharing">Numbers</a>
     </div>
 
 </body>
