--- a/l.html
+++ b/l.html
@@ -47,7 +47,7 @@
     <div class="main-content">
         <h1>Liz</h1>
         <p>
-           I'm sorry, I haven't finished this one yet. :(
+           I am really sorry for dragging you into all my crap, and always making it my prerogative to dump everything on you. Leaving the group is nothing any of you did, and noting any of you could have stopped and I'm very sorry.
         </p>
     </div>
 
