--- a/m.html
+++ b/m.html
@@ -47,7 +47,7 @@
     <div class="main-content">
         <h1>Mackenzie</h1>
         <p>
-           I'm sorry, I haven't finished this one yet. :(
+           Sorry for ditching. :( I hope that Swarley gets over his Achilles Testicle problems, lol.
         </p>
     </div>
 
