--- a/t.html
+++ b/t.html
@@ -45,9 +45,9 @@
 <body>
 
     <div class="main-content">
-        <h1>Wyatt Sucks</h1>
+        <h1>Triston</h1>
         <p>
-           I'm sorry, I haven't finished this one yet. :(
+           I'm sorry for all the crap I've ever put you through. Being my friend was like being thrown off of a mechanical bull, into a hot tub, sometimes, but just know, I'm sorry. 
         </p>
     </div>
 
