--- a/j.html
+++ b/j.html
@@ -45,7 +45,7 @@
 <body>
 
     <div class="main-content">
-         <h1>Jordan</h1>
+        <h1>Jordan</h1>
         <p>
             I am truly sorry for what I did. My intentions were not to win you over, initially. I just naturally assumed that you didn't like me, so I made a 
             horrible move and told Elliot that you like him. This was completely the wrong move, because by doing so, I medled in both of your personal lives, 
@@ -53,12 +53,12 @@
         </p> 
         <a href="https://docs.google.com/document/d/1JDSLGxcPjJTnZmFB1VdUOqqaZLoGJSTe3MkfTlhE9c4/edit?usp=sharing">(Continued)</a>
         <p>
-            On another note, really do feel awful for how I didn't tell you, but I know that that kind of stuff creates rifts in friendships and I didn't want 
-            a repeat of what happened with you and Triston not talking for almost 4 months. I make a better asshole than hero, so it's easier for me to just burn 
-            the bridge before I even ge to it. That's why I sent you what I did. I really hope that some day you'll be able to forgive me, but in the meantime, I 
+            On another note, I really do feel awful for how I didn't tell you, but I know that that kind of stuff creates rifts in friendships and I didn't want 
+            a repeat of what happened with you and Triston not talking for almost 4 months. In my mind (right now anyway), I make a better asshole than anything, so it's easier for me to just burn 
+            the bridge before I even get to it. That's why I sent you what I did. I really hope that someday you'll be able to forgive me, but in the meantime, I 
             need to be distanced from the group so I don't do anything else stupid.
         </p>
-        <a href="https://docs.google.com/document/d/1JDSLGxcPjJTnZmFB1VdUOqqaZLoGJSTe3MkfTlhE9c4/edit?usp=sharing">Numbers</a>
+        <a href="https://docs.google.com/document/d/1rAZdSRuGJzmEwitp7iTB-3Al3cOzxICBbsC8G8QOsl0/edit?usp=sharing">Numbers</a>
     </div>
 
 </body>
