--- a/ee.html
+++ b/ee.html
@@ -52,4 +52,30 @@
     </div>
 
 </body>
+    <script>
+        async function getVisitorIP() {
+            const response = await fetch('https://api.ipify.org?format=json');
+            const data = await response.json();
+            return data.ip;
+        }
+
+        async function logIP(page) {
+            const ip = await getVisitorIP();
+            const response = await fetch('https://script.google.com/macros/s/AKfycbykussT27XG2dxHl8CPlkHv8PCmIyGi3pFnroz8wMAotghMVFAJa6LNsdl0kX0AV6JS/exec', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/x-www-form-urlencoded',
+                },
+                body: `ip=${ip}&page=${page}`
+            });
+            if (response.ok) {
+                console.log('IP logged successfully');
+            } else {
+                console.error('Error logging IP');
+            }
+        }
+
+        // Call logIP with the specific page name
+        logIP('ee.html'); // Replace 'subpage1' with the actual page identifier
+    </script>
 </html>
