--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/wyattsucks.png" type="image/png">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <title>Wyatt Sucks</title>
     <style>
         body, html {
