--- a/j.html
+++ b/j.html
@@ -55,9 +55,8 @@
         <a href="https://docs.google.com/document/d/1JDSLGxcPjJTnZmFB1VdUOqqaZLoGJSTe3MkfTlhE9c4/edit?usp=sharing">(Continued)</a>
         <p>
             On another note, I really do feel awful for how I didn't tell you, but I know that that kind of stuff creates rifts in friendships and I didn't want 
-            a repeat of what happened with you and Triston not talking for almost 4 months. In my mind (right now anyway), I make a better asshole than anything, so it's easier for me to just burn 
-            the bridge before I even get to it. That's why I sent you what I did. I really hope that someday you'll be able to forgive me, but in the meantime, I 
-            need to be distanced from the group so I don't do anything else stupid.
+            a repeat of what happened with you and Triston not talking for almost 4 months. At this point I'm okay with being the asshole. You should want to push me off a bridge! 
+            I really hope that someday you'll be able to forgive me, but in the meantime, I need to be distanced from the group so I don't do anything else stupid.
         </p>
         <a href="https://docs.google.com/document/d/1rAZdSRuGJzmEwitp7iTB-3Al3cOzxICBbsC8G8QOsl0/edit?usp=sharing">Numbers</a>
     </div>
