--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <div class="main-content hidden" id="main-content">
         <h1>Wyatt Sucks</h1>
         <p>
-            Wyatt sucks! He is a horrible friend and person. Honestly, I don't see why any of you were friends with him in the first place. If you need to find out why he's a terrible person, please click the respective links below.
+            Wyatt Sucks! He's been a horrible friend and person. If you need more proof, please click one of the respective links below.
         </p>
         <h3><a href="/j.html">Jordan</a></h3>
         <h3><a href="/e.html">Elliot</a></h3>
