--- a/index.html
+++ b/index.html
@@ -76,14 +76,8 @@
     <div class="main-content hidden" id="main-content">
         <h1>Wyatt Sucks</h1>
         <p>
-            Wyatt Sucks! He's been a horrible friend and person. If you need more proof, please click one of the respective links below.
+            Wyatt Sucks! He's been a horrible friend and person. 
         </p>
-        <h3><a href="/j.html">Jordan</a></h3>
-        <h3><a href="/e.html">Elliot</a></h3>
-        <h3><a href="/t.html">Triston</a></h3>
-        <h3><a href="/l.html">Liz</a></h3>
-        <h3><a href="/m.html">Mackenzie</a></h3>
-        <h3><a href="/ee.html">Everyone Else</a></h3>
     </div>
 
     <script>
