--- a/ee.html
+++ b/ee.html
@@ -48,7 +48,7 @@
     <div class="main-content">
         <h1>Wyatt Sucks</h1>
         <p>
-           Wyatt truly sucks. He is a bad person, a bad friend (as shown by the links on the main page), and just generally a jerk. If you belive that you should be on the main list as well, please <a href="mailto:wyatt.kraai@thegenerals.org">email</a> or <a href="tel:712-461-1390">text</a> me.
+           Wyatt truly sucks. He is a bad person, a bad friend (as shown by the links on the main page), and just generally a jerk. If you belive that you should be on the main list as well, please <a href="mailto:wyatt@wyattsucks.org">email</a> or <a href="tel:712-461-1390">text</a> me.
         </p>
     </div>
 
