--- a/index.html
+++ b/index.html
@@ -61,6 +61,12 @@
             transition: transform 1s ease;
             z-index: -1;
         }
+
+        a {
+            color: inherit; /* Makes links inherit the text color */
+            text-decoration: none; /* Removes underline from links */
+            cursor: pointer; /* Changes cursor to pointer on hover */
+        }
     </style>
 </head>
 <body>
@@ -77,6 +83,11 @@
         <h1>Wyatt Sucks</h1>
         <p>
             Wyatt Sucks! He's been a horrible friend and person. 
+        </p>
+        <p>
+            He was not truthful and honestly did not deserve to be friends with <a href="/list.html">any of you</a>.
+            He absolutely should not have done any of the things that he did to <a href="/list.html">any of the people that he did them to</a>.
+            I am truly sorry, and all of you should want to drive me off of a clif. 🙃
         </p>
     </div>
 
