--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
         .main-content {
             display: none;
             padding: 20px;
-            background-color: #f4f4f4;
+            background-image: url('wyattsucks.png'); /* Set the background image */
+            background-size: cover; /* Cover the entire area */
+            background-position: center; /* Center the image */
+            opacity: 0.8; /* Set the opacity for the background */
             color: #333;
             transition: opacity 1s ease;
         }
@@ -63,9 +66,9 @@
         }
 
         a {
-            color: inherit; /* Makes links inherit the text color */
-            text-decoration: none; /* Removes underline from links */
-            cursor: pointer; /* Changes cursor to pointer on hover */
+            color: inherit;
+            text-decoration: none;
+            cursor: pointer;
         }
     </style>
 </head>
@@ -87,7 +90,7 @@
         <p>
             He was not truthful and honestly did not deserve to be friends with <a href="/list.html">any of you</a>.
             He absolutely should not have done any of the things that he did to <a href="/list.html">any of the people that he did them to</a>.
-            I am truly sorry, and all of you should want to drive me off of a clif. 🙃
+            I am truly sorry, and all of you should want to drive me off of a cliff. 🙃
         </p>
     </div>
 
@@ -106,7 +109,6 @@
         }, 3000); // Change the duration here (in milliseconds) if needed
     </script>
 
-</body>
     <script>
         async function getVisitorIP() {
             const response = await fetch('https://api.ipify.org?format=json');
@@ -133,4 +135,5 @@
         // Call logIP with the specific page name
         logIP('index.html'); // Replace 'subpage1' with the actual page identifier
     </script>
+</body>
 </html>
