--- a/index.html
+++ b/index.html
@@ -35,10 +35,7 @@
         .main-content {
             display: none;
             padding: 20px;
-            background-image: url('wyattsucks.png'); /* Set the background image */
-            background-size: cover; /* Cover the entire area */
-            background-position: center; /* Center the image */
-            opacity: 0.8; /* Set the opacity for the background */
+            background-color: #f4f4f4;
             color: #333;
             transition: opacity 1s ease;
         }
@@ -66,9 +63,9 @@
         }
 
         a {
-            color: inherit;
-            text-decoration: none;
-            cursor: pointer;
+            color: inherit; /* Makes links inherit the text color */
+            text-decoration: none; /* Removes underline from links */
+            cursor: pointer; /* Changes cursor to pointer on hover */
         }
     </style>
 </head>
@@ -90,22 +87,8 @@
         <p>
             He was not truthful and honestly did not deserve to be friends with <a href="/list.html">any of you</a>.
             He absolutely should not have done any of the things that he did to <a href="/list.html">any of the people that he did them to</a>.
-            I am truly sorry, and all of you should want to drive me off of a cliff. 🙃
+            I am truly sorry, and all of you should want to drive me off of a clif. 🙃
         </p>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
     </div>
 
     <script>
@@ -123,6 +106,7 @@
         }, 3000); // Change the duration here (in milliseconds) if needed
     </script>
 
+</body>
     <script>
         async function getVisitorIP() {
             const response = await fetch('https://api.ipify.org?format=json');
@@ -149,5 +133,4 @@
         // Call logIP with the specific page name
         logIP('index.html'); // Replace 'subpage1' with the actual page identifier
     </script>
-</body>
 </html>
