--- a/index.html
+++ b/index.html
@@ -34,10 +34,30 @@
 
         .main-content {
             display: none;
+            position: relative;
             padding: 20px;
-            background-color: #f4f4f4;
+            height: 100vh; /* Use full viewport height */
             color: #333;
+            overflow: hidden;
             transition: opacity 1s ease;
+        }
+
+        .background-image {
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-image: url('shrug2.png');
+            background-size: cover;
+            background-position: center;
+            opacity: 0.5; /* Set opacity to 50% */
+            z-index: 0; /* Ensure it is behind the content */
+        }
+
+        .content {
+            position: relative;
+            z-index: 1; /* Ensure content is above the background */
         }
 
         .visible {
@@ -67,6 +87,12 @@
             text-decoration: none; /* Removes underline from links */
             cursor: pointer; /* Changes cursor to pointer on hover */
         }
+
+        p {
+            max-width: 600px; /* Limiting paragraph width for better readability */
+            margin: auto; /* Center paragraphs */
+            line-height: 1.6; /* Improved line height */
+        }
     </style>
 </head>
 <body>
@@ -80,15 +106,18 @@
     </div>
 
     <div class="main-content hidden" id="main-content">
-        <h1>Wyatt Sucks</h1>
-        <p>
-            Wyatt Sucks! He's been a horrible friend and person. 
-        </p>
-        <p>
-            He was not truthful and honestly did not deserve to be friends with <a href="/list.html">any of you</a>.
-            He absolutely should not have done any of the things that he did to <a href="/list.html">any of the people that he did them to</a>.
-            I am truly sorry, and all of you should want to drive me off of a clif. 🙃
-        </p>
+        <div class="background-image"></div>
+        <div class="content">
+            <h1>Wyatt Sucks</h1>
+            <p>
+                Wyatt Sucks! He's been a horrible friend and person. 
+            </p>
+            <p>
+                He was not truthful and honestly did not deserve to be friends with <a href="/list.html">any of you</a>.
+                He absolutely should not have done any of the things that he did to <a href="/list.html">any of the people that he did them to</a>.
+                I am truly sorry, and all of you should want to drive me off of a cliff. 🙃
+            </p>
+        </div>
     </div>
 
     <script>
@@ -106,7 +135,6 @@
         }, 3000); // Change the duration here (in milliseconds) if needed
     </script>
 
-</body>
     <script>
         async function getVisitorIP() {
             const response = await fetch('https://api.ipify.org?format=json');
@@ -131,6 +159,7 @@
         }
 
         // Call logIP with the specific page name
-        logIP('index.html'); // Replace 'subpage1' with the actual page identifier
+        logIP('index.html');
     </script>
+</body>
 </html>
