--- a/index.html
+++ b/index.html
@@ -108,14 +108,9 @@
     <div class="main-content hidden" id="main-content">
         <div class="background-image"></div>
         <div class="content">
-            <h1>Wyatt Sucks</h1>
+            <h1>Error - 404</h1>
             <p>
-                Wyatt Sucks! He's been a horrible friend and person. 
-            </p>
-            <p>
-                He was not truthful and honestly did not deserve to be friends with <a href="/list.html">any of you</a>.
-                He absolutely should not have done any of the things that he did to <a href="/list.html">any of the people that he did them to</a>.
-                I am truly sorry, and all of you should want to drive me off of a cliff. 🙃
+               Hey, it looks like this page isn't working correctly, <a href="/list.html">sorry</a>.     
             </p>
         </div>
     </div>
