--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wyatt's Projects</title>
+    <title>Wyatt Sucks</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -72,7 +72,7 @@
 <body>
 
 <header>
-    <h1>Wyatt's Projects</h1>
+    <h1>Wyatt Sucks</h1>
 </header>
 
 <nav>
