--- a/about.html
+++ b/about.html
@@ -82,7 +82,7 @@
 </main>
 
 <footer>
-    <p>Site made and updated by Wyatt Kraai</p>
+    <p>Site made and updated by A Total Idiot</p>
 </footer>
 
 </body>
