--- a/ramsa_max.html
+++ b/ramsa_max.html
@@ -141,7 +141,7 @@
 </main>
 
 <footer>
-    <p>Site made and updated by Wyatt Kraai</p>
+    <p>Site made and updated by A Total Idiot</p>
 </footer>
 
 </body>
