--- a/404.html
+++ b/404.html
@@ -92,7 +92,7 @@
 </main>
 
 <footer>
-    <p>Site made and updated by Wyatt Kraai</p>
+    <p>Site made and updated by A Total Idiot</p>
 </footer>
 
 </body>
