--- a/JerryBackendPass.html
+++ b/JerryBackendPass.html
@@ -112,7 +112,7 @@
 </main>
 
 <footer>
-    <p>Site made and updated by Wyatt Kraai</p>
+    <p>Site made and updated by A Total Idiot</p>
 </footer>
 
 <script>
