--- a/about/index.html
+++ b/about/index.html
@@ -62,7 +62,7 @@
 
 <nav>
     <a href="/index.html">Home</a>
-    <a href="/about.html">About</a>
+    <a href="/about">About</a>
     <a href="mailto:imacweirdo@outlook.com">Contact</a>
 </nav>
 
