--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
 </header>
 
 <nav>
-    <a href="/index.html">Home</a>
-    <a href="/about.html">About</a>
+    <a href="/">Home</a>
+    <a href="/about">About</a>
     <a href="mailto:imacweirdo@outlook.com">Contact</a>
 </nav>
 
