--- a/about/index.html
+++ b/about/index.html
@@ -61,7 +61,7 @@
 </header>
 
 <nav>
-    <a href="/index.html">Home</a>
+    <a href="/">Home</a>
     <a href="/about">About</a>
     <a href="mailto:imacweirdo@outlook.com">Contact</a>
 </nav>
