--- a/about/index.html
+++ b/about/index.html
@@ -63,7 +63,7 @@
 <nav>
     <a href="/">Home</a>
     <a href="/about">About</a>
-    <a href="mailto:imacweirdo@outlook.com">Contact</a>
+    <a href="mailto:wyatt@wyattsucks.org">Contact</a>
 </nav>
 
 <main>
@@ -74,7 +74,7 @@
     <p>I aim to solve problems that I have (or that others ask me to help with) and share the results publicly with others who may have the same problem.</p>
     
     <h2>Join Me</h2>
-    <p>If you have any insight to share, any complaints, or any other such business, feel free to email me at <a href="mailto:imacweirdo@outlook.com">iMacWeirdo@outlook.com</a>.</p>
+    <p>If you have any insight to share, any complaints, or any other such business, feel free to email me at <a href="mailto:wyatt@wyattsucks.org">wyatt@wyattsucks.org</a>.</p>
     <p>  </p>
     <p>  </p>
     <br></br>
