--- a/JERRY/index.html
+++ b/JERRY/index.html
@@ -94,9 +94,9 @@
 </header>
 
 <nav>
-    <a href="/index.html">Home</a>
-    <a href="/about.html">About</a>
-    <a href="/pass.html">Contact</a>
+    <a href="/">Home</a>
+    <a href="/about">About</a>
+    <a href="/pass">Contact</a>
 </nav>
 
 <main>
