--- a/404/index.html
+++ b/404/index.html
@@ -77,15 +77,15 @@
 </header>
 
 <nav>
-    <a href="/index.html">Home</a>
-    <a href="/about.html">About</a>
-    <a href="mailto:imacweirdo@outlook.com">Contact</a>
+    <a href="/">Home</a>
+    <a href="/about">About</a>
+    <a href="mailto:wyatt@wyattsucks.org">Contact</a>
 </nav>
 
 <main>
     <h1>404</h1>
     <h3>File not found :(</h3>
-    <p>The file that you are looking for is either under construction or does not exist. If you think this happened by mistake, you can email me at <a href = "mailto:imacweirdo@outlook.com">iMacWeirdo@outlook.com</a>. If you would like to go to the main page click <a href = "/index.html">here</a>.</p>
+    <p>The file that you are looking for is either under construction or does not exist. If you think this happened by mistake, you can email me at <a href = "mailto:wyatt@wyattsucks.org">iMacWeirdo@outlook.com</a>. If you would like to go to the main page click <a href = "/">here</a>.</p>
     <p>  </p>
     <p>  </p>
     <br></br>
