--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 <nav>
     <a href="/">Home</a>
     <a href="/about">About</a>
-    <a href="mailto:imacweirdo@outlook.com">Contact</a>
+    <a href="mailto:wyatt@wyattsucks.org">Contact</a>
 </nav>
 
 <main>
@@ -93,18 +93,18 @@
         </thead>
         <tbody>
             <tr>
-                <td><em><a href = "/windows98_VM.html">Windows 98 Virtual Machine</a></em></td>
-                <td><em>A step-by-step in creating a Windows 98 virtual machine (helpful for my <a href = "/ramsa_max.html">Ramsa Max Project</a>).</em></td>
+                <td><em><a href = "/windows98_VM">Windows 98 Virtual Machine</a></em></td>
+                <td><em>A step-by-step in creating a Windows 98 virtual machine (helpful for my <a href = "/ramsa_max">Ramsa Max Project</a>).</em></td>
                 <td><em>11/8/2024</em></td>
             </tr>
             <tr>
-                <td><a href="/ramsa_max.html">Ramsa MAX Software</a></td>
+                <td><a href="/ramsa_max">Ramsa MAX Software</a></td>
                 <td>The seemingly disappeared 1990s software is now available, once again!</td>
                 <td>11/6/2024</td>
             </tr>
             
             <tr>
-                <td><em><a href="/JERRY.html">JERRY</em></td>
+                <td><em><a href="/JERRY">JERRY</em></td>
                 <td><em>JERRY</em></td>
                 <td><em>JERRY</em></td>
             </tr>
