--- a/JERRYabout/index.html
+++ b/JERRYabout/index.html
@@ -63,7 +63,7 @@
 </main>
 
 <footer>
-    <p>Site made and updated by Wyatt Kraai</p>
+    <p>Site made and updated by A Total Idiot</p>
 </footer>
 
 </body>
