--- a/nicetry/index.html
+++ b/nicetry/index.html
@@ -84,9 +84,9 @@
 </header>
 
 <nav>
-    <a href="/index.html">Home</a>
-    <a href="/JERRYabout.html">About</a>
-    <a href="/pass.html">Contact</a>
+    <a href="/">Home</a>
+    <a href="/JERRYabout">About</a>
+    <a href="/pass">Contact</a>
 </nav>
 
 <main>
